# keys-cli

./: README.md  justfile  pyproject.toml
.github/workflows/: readme-review.yml
keys/: __main__.py  api.py  cli.py  config.py
keys/lib/: __init__.py  clipboard.py  daemon.py  renderer.py
prompts/: commit.md  document.md  explain.md  fix.md  refactor.md  review.md
tests/unit/: test_clipboard.py  test_config.py
